# SIDM_order_op_demao

./: CMakeLists.txt  README.md
__MACOSX/: ._simtemplate
simtemplate/: sidm1.param  sidm1.param-usedvalues  submitsidm1.sh
simtemplate/codeSIDM1/: GadgetSIDM1  Makefile  Makefile~  allvars.h  begrun.c  demo.param  demo.param-usedvalues  doscatt.c  gravtree.c  gravtree.c~  init.c  myvector.c  ngb_sidm.c  predict.c  predict.c~  proto.h  run.c  run1.param  run1.param-usedvalues  run1.sh  run2.param  run2.param-usedvalues  run2.sh  run3.param  run3.param-usedvalues  run3.sh  run4.param  run4.param-usedvalues  run4.sh  run5.param  run5.param-usedvalues  run5.sh  run6.param  run6.param-usedvalues  run6.sh  run7.param  run7.param-usedvalues  run7.sh  sidm.c
simtemplate/input/: definitions.h  nfw-hern.out  nfw.out  nfw.out~  spheric
